FO: Fix the Newsletter block overlap on Customer Reassurance block

--- a/themes/classic/_dev/css/components/newsletter.scss
+++ b/themes/classic/_dev/css/components/newsletter.scss
@@ -1,6 +1,7 @@
 .block_newsletter {
   @include search-box();
   float: inherit;
+  clear:both;
   width: 100%;
   max-width: 50rem;
   margin: auto;
